trunk/Archive2/04/620e1717bbe1c9/output
main.cpp: In member function 'T create_functor<T, A>::functor::operator()(A ...)':
main.cpp:15:28: error: missing template arguments before '(' token
             return function( arguments );
                            ^
main.cpp: At global scope:
main.cpp:25:49: error: 'create_functor<bool, const int&, const int&>::functor' is not a template
 create_functor< bool, const int&, const int& >::functor< &less_than > less_than_int;
                                                 ^
main.cpp: In member function 'T create_functor<T, A>::functor::operator()(A ...) [with T = bool; A = {const int&, const int&}]':
main.cpp:16:9: warning: control reaches end of non-void function [-Wreturn-type]
         }
         ^
